@@ -1,3 +1,11 @@
+2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* xml_puller.c (XML_PullerIconv): Stop allocating an extra byte
+	to match gawk conventions.  Arnold has indicated that there is no
+	good reason for this.
+	* xml_puller.h: Change comment to reflect the removal of the extra
+	byte.
+
 2014-11-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* NEWS: Update for version 1.0.2.
